--- a/package.json
+++ b/package.json
@@ -95,11 +95,11 @@
     "@types/react": "^18.3.20",
     "@types/react-dom": "^18.3.6",
     "@types/ws": "^8.18.1",
-    "@vercel/node": "^2.15.10",
+    "@vercel/node": "^2.3.0",
     "@vitejs/plugin-react": "^4.4.0",
     "autoprefixer": "^10.4.21",
     "cross-env": "^7.0.3",
-    "drizzle-kit": "^0.18.1",
+    "drizzle-kit": "^0.31.0",
     "esbuild": "^0.25.2",
     "postcss": "^8.5.3",
     "tailwindcss": "^3.4.17",
@@ -109,5 +109,11 @@
   },
   "optionalDependencies": {
     "bufferutil": "^4.0.9"
+  },
+
+  "overrides": {
+    "rollup": {
+      "@rollup/rollup-linux-x64-gnu": "4.6.1"
+    }
   }
 }
